<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="data"
            type="com.example.recipenote.viewobserver.RecipeViewObserver" />
    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="56dp"
            app:expandedTitleMarginStart="40dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/toolbarImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            tools:context=".homepage.WriteYourRecipe">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/atText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="start"
                android:text="@string/recipe"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
                android:textColor="#000000"
                android:textSize="30sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/etRecipe"
                android:text="@{data.recipeName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@color/black"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/atIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="start"
                android:text="@string/ingredients"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="2dp"
                android:textColor="#000000"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/etIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@color/black"
                android:text="@{data.ingredient}"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="start"
                android:text="@string/how_to_make"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/etHowToMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{data.howToMake}"
                android:textCursorDrawable="@color/black"/>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/imDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_delete"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>